Disabled uploading/downloading files from other clients.

--- a/cfg/clientupdate.cfg
+++ b/cfg/clientupdate.cfg
@@ -5,4 +5,6 @@ bind "F3" 			"votekick"
 delete_soundcache
 delete_motdcheck
 fof_highlight_servers 0
+cl_allowdownload 0
+cl_allowupload 0
 fof_cl_version 13
